edition = "2023";

package otterscale.bist.v1;

import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";

option go_package = "github.com/openhdc/otterscale/api/bist/v1;pb";

service BISTService {
  rpc ListTestResults(ListTestResultsRequest) returns (ListTestResultsResponse);
  rpc CreateTestResult(CreateTestResultRequest) returns (TestResult);
  rpc DeleteTestResult(DeleteTestResultRequest) returns (google.protobuf.Empty);
  rpc GetCephObjectGateway(GetCephObjectGatewayRequest) returns (CephObjectGateway);
  rpc ListMinIOs(ListMinIOsRequest) returns (ListMinIOsResponse);
}

message CephBlockDevice {
  string scope_uuid = 1;
  string facility_name = 2;
}

message NetworkFileSystem {
  string endpoint = 1;
  string path = 2;
}

message CephObjectGateway {
  string name = 1;
  string endpoint = 2;
}

message MinIO {
  string name = 1;
  string endpoint = 2;
}

message ExternalObjectService {
  string endpoint = 1;
  string access_key = 2;
  string secret_key = 3;
}

message FIO {
  message Input {
    enum AccessMode {
      READ = 0;
      WRITE = 1;
      TRIM = 2;
      READ_WRITE = 3;
      TRIM_WRITE = 4;
      RAND_READ = 5;
      RAND_WRITE = 6;
      RAND_TRIM = 7;
      RAND_RW = 8;
      RAND_TRIM_WRITE = 9;
    }
    AccessMode access_mode = 1;
    uint64 job_count = 31;   // 1.13.3 Job description
    string run_time = 41;    // 1.13.4 Time related parameters
    string block_size = 71;  // 1.13.7 Block size
    string file_size = 91;   // 1.13.9 I/O size
    uint64 io_depth = 121;   // 1.13.12 I/O depth
  }
  message Output {
    message Values {
      message Latency {
        uint64 min = 1;
        uint64 max = 2;
        double mean = 3;
      }
      uint64 io_bytes = 1;
      uint64 bw = 2;
      uint64 iops = 3;
      uint64 runtime = 4;
      uint64 total_ios = 5;
      Latency latency = 6;
    }
    Values read = 1;
    Values write = 2;
    Values trim = 3;
  }
  oneof target {
    CephBlockDevice ceph_block_device = 1;
    NetworkFileSystem network_file_system = 2;
  }
  Input input = 11;
  Output output = 12;
}

message Warp {
  message Input {
    enum Operation {
      GET = 0;
      PUT = 1;
      DELETE = 2;
      LIST = 3;
      STAT = 4;
      MIXED = 5;
    }
    Operation operation = 1;
    string duration = 21;
    string object_size = 31;
    string object_num = 32;
  }
  message Output {
    message Operation {
      string type = 1;
      double fastest_bps = 4;
      double fastest_ops = 5;
      double median_bps = 6;
      double median_ops = 7;
      double slowest_bps = 8;
      double slowest_ops = 9;
      double bytes = 10;
      double ops = 11;
      google.protobuf.Timestamp started_at = 2;
      google.protobuf.Timestamp ended_at = 3;
    }
    repeated Operation operations = 1;
  }
  oneof target {
    CephObjectGateway ceph_object_gateway = 1;
    MinIO min_io = 2;
    ExternalObjectService external_object_service = 3;
  }
  Input input = 11;
  Output output = 12;
}

message TestResult {
  enum Status {
    Running = 0;
    Succeeded = 1;
    Failed = 2;
  }
  string uid = 1;
  string name = 2;
  Status status = 3;
  string created_by = 4;
  google.protobuf.Timestamp started_at = 11;
  google.protobuf.Timestamp completed_at = 12;
  oneof kind {
    FIO fio = 101;
    Warp warp = 102;
  }
}

message ListTestResultsRequest {}

message ListTestResultsResponse {
  repeated TestResult test_results = 1;
}

message CreateTestResultRequest {
  string name = 1;
  oneof kind {
    FIO fio = 101;
    Warp warp = 102;
  }
}

message DeleteTestResultRequest {
  string name = 1;
}

message GetCephObjectGatewayRequest {
  string scope_uuid = 1;
}

message ListMinIOsRequest {
  string scope_uuid = 1;
}

message ListMinIOsResponse {
  repeated MinIO minios = 1;
}